--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -8,7 +8,7 @@ import Plugin from '../assets/icons/plugin.svg';
 import Repo from '../assets/icons/repo.svg';
 import StackAlt from '../assets/icons/stackalt.svg';
 
-<Meta title="Example/Introduction" />
+<Meta title="Introduction" />
 
 <style>
   {`
